DMT-86 Fix settings icon visible in viewing mode
Update styling in order to hide the settings icon in viewing mode

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -71,6 +71,8 @@ svg {
     fill: #bdbfc3;
     transition: opacity 0.25s cubic-bezier(1, 0.28, 0, 0.94);
     cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
 }
 
 #settings-icon:hover {
